k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: restaurant-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: payment-service:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: restaurant-demo
spec:
  selector:
    app: payment
  ports:
    - port: 3003
      targetPort: 3003
